Player/test/tools/analysis_output.txt
Godot Engine v4.6.stable.mono.official.89cea1439 - https://godotengine.org

Godot_v4.6-stable_mono_win64.exe : SCRIPT E
RROR: Parse Error: Invalid operands to oper
ator *, String and int.
位於 線路:1 字元:1
+ & "D:\Godot_v4.6-stable_mono_win64\Godot_
v4.6-stable_mono_win64\Godot ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified 
   : (SCRIPT ERROR: P...String and int.:S  
  tring) [], RemoteException
    + FullyQualifiedErrorId : NativeComman 
   dError
 
   at: GDScript::reload (res://Player/test/
tools/analyze_stair_root_motion.gd:11)
SCRIPT ERROR: Parse Error: Invalid operands
 to operator +, String and Nil.
   at: GDScript::reload (res://Player/test/
tools/analyze_stair_root_motion.gd:11)
SCRIPT ERROR: Parse Error: Invalid operands
 to operator *, String and int.
   at: GDScript::reload (res://Player/test/
tools/analyze_stair_root_motion.gd:13)
SCRIPT ERROR: Parse Error: Invalid operands
 to operator *, String and int.
   at: GDScript::reload (res://Player/test/
tools/analyze_stair_root_motion.gd:24)
SCRIPT ERROR: Parse Error: Invalid operands
 to operator +, String and Nil.
   at: GDScript::reload (res://Player/test/
tools/analyze_stair_root_motion.gd:24)
SCRIPT ERROR: Parse Error: Invalid operands
 to operator *, String and int.
   at: GDScript::reload (res://Player/test/
tools/analyze_stair_root_motion.gd:26)
SCRIPT ERROR: Parse Error: Invalid operands
 to operator *, String and int.
   at: GDScript::reload (res://Player/test/
tools/analyze_stair_root_motion.gd:29)
SCRIPT ERROR: Parse Error: Invalid operands
 to operator +, String and Nil.
   at: GDScript::reload (res://Player/test/
tools/analyze_stair_root_motion.gd:29)
SCRIPT ERROR: Parse Error: Invalid operands
 to operator *, String and int.
   at: GDScript::reload (res://Player/test/
tools/analyze_stair_root_motion.gd:31)
ERROR: Failed to load script "res://Player/
test/tools/analyze_stair_root_motion.gd" wi
th error "Parse error".
   at: load (modules/gdscript/gdscript.cpp:
2907)
